# new_admin_panel_sprint_3

./: README.md  docker-compose.yml  es_service.py  etl_service.py  extract_result.py  main.py  my_backoff.py  postgresql_service.py  requirements.txt  sql_factory.py  utils.py
django_app/: README.md  conftest.py  gunicorn.conf.py  pyproject.toml  setup.cfg
django_app/api/v1/: urls.py
django_app/api/v1/movies/: serializers.py  services.py  urls.py  views.py
django_app/api/v1/movies/tests/: test_movies.py
django_app/example/: settings.py  settings_dev.py  urls.py
django_app/example/components/: database.py  debug_toolbar_config.py  rest_framework.py  spectacular.py  templates.py
django_app/locale/ru/LC_MESSAGES/: django.mo  django.po
django_app/movies/: admin.py  choices.py  models.py  paginations.py  utils.py  validators.py
django_app/movies/management/commands/: wait_for_db.py
django_app/movies/migrations/: 0001_initial.py  0002_create_superuser.py
django_app/requirements/: base.txt  dev.txt
django_app/templates/admin/: base_site.html
docker/dev/db/: pg.conf
docker/dev/django_app/: Dockerfile
docker/dev/env/: .conn.env  .db.env  .env  .redis.env
etl/: README.md  conn_data.py  es_service.py  etl_service.py  index_data.py  loggers.py  main.py  models.py  my_backoff.py  my_types.py  postgresql_service.py  queries.py  sql_factory.py  state_redis.py  utils.py
etl/state/: state_redis.py
fastapi_solution/: README.md  gunicorn.conf.py  requirements.txt
fastapi_solution/src/: main.py
state/: state_class.py  state_redis_test.py
(+19 files in other folders)
